--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                 <div class="landing-text">
                     <h1 class="landing-title">Design systems, computation, and spatial intelligence</h1>
                     <p class="landing-subtitle">
-                        A growing collection of computational sketches and spatial experiments, 
-                        lines of code tracing space, uncovering new forms shaped by data, design, and curiosity.
+                        A growing collection of computational sketches and spatial experiments - lines of code shaping space, uncovering new forms shaped by data, design, and curiosity.
                     </p>
                     <p class="landing-credit">Computational Design Portfolio · Hesham Shawqy</p>
                 </div>
